# news-aggregator

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  ideas-v2.md  ideas.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py  arxiv.py  arxiv_extra.py  base.py  github_trending.py  hackernews.py  huggingface.py  lab_blogs.py  lobsters.py  openreview.py  papers_with_code.py  podcasts.py  reddit.py  rss_parser.py  youtube.py
backend/app/db/: client.py
backend/app/jobs/: fetch_sources.py
backend/app/middleware/: session.py
backend/app/models/: item.py  source.py
backend/app/repositories/: items.py  sources.py
backend/app/routers/: health.py  items.py  sources.py
backend/tests/: conftest.py
backend/tests/fixtures/: arxiv_response.xml  atom_feed_sample.xml  github_trending.html  hackernews_response.json  huggingface_daily_papers.json  lab_blog_rss.xml  lobsters_rss.xml  openreview_response.json  papers_with_code_rss.xml  podcast_rss.xml  reddit_response.json  rss_feed_sample.xml  youtube_atom.xml
backend/tests/unit/: test_adapter_base.py  test_adapter_registry.py  test_arxiv_adapter.py  test_arxiv_extra_adapter.py  test_config.py  test_db_client.py  test_fetch_job.py  test_github_trending_adapter.py  test_hackernews_adapter.py  test_health.py  test_huggingface_adapter.py  test_item_repository.py  test_items_router.py  test_lab_blogs_adapter.py  test_lobsters_adapter.py  test_models.py  test_openreview_adapter.py  test_papers_with_code_adapter.py  test_podcasts_adapter.py  (+7 more)
(+50 files in other folders)
